@@ -15,19 +15,23 @@ jobs:
         uses: actions/checkout@v2
         with:
           fetch-depth: 0
+
       - name: set version number from commit tag  # Overwrite the placeholder version number in Cargo.toml with the tag
         run: |
           export VERSION=${{github.ref_name}}
           sed -i "s/0.0.0/$VERSION/g" Cargo.toml
-      - name: cargo build
+
+      - name: cargo build --verbose
         run: |
           cargo build --release --verbose
           ls -lah target/release
+
       - name: cargo deb
         run: |
           cargo install cargo-deb
           cargo deb --verbose
           ls -lah target/debian
+
       - name: release
         uses: softprops/action-gh-release@v1
         if: startsWith(github.ref, 'refs/tags/')  # Presumably redundant due to the [0-9] filter, but kept for safety
