@@ -3,3 +3,4 @@
 - Improve ci def comments
 - Add demo gif to README
 - Add details about nsswitch.conf to README
+- Add more info to debug messages
